ic-small-fixes-bib

--- a/html/ivens-craft/ic-family_loss.html
+++ b/html/ivens-craft/ic-family_loss.html
@@ -25,7 +25,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Merriweather:wght@400;700;900&family=Source+Sans+Pro:wght@400;600&family=Amaranth:wght@400;700&display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" type="text/css" href="/css/critical.css?=newVers_0025"/>
-		<style>.image-wrapper::after{padding-bottom:calc((524/698)*100%)}</style><!-- Change -->
+		<style>.image-wrapper::after{padding-bottom:calc((464/698)*100%)}</style><!-- Change -->
 	</head>
 
 	<!-- Site code first adapted from Adrian S. Wisnicki's Fieldwork of Empire website (https://awisnicki.github.io/fieldwork_of_empire/) which is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="524" src="/img/ivens-craft/liv_028061_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028061_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028061_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028061_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028061_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028061_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028061_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Six men standing in front of a wooden building flanked by two horse carts with men in them." /><!-- Change -->
+					<img width="698" height="464" src="/img/ivens-craft/liv_028008_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028008_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028008_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028008_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028008_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028008_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028008_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="A man and woman sitting with two children; the woman holds a baby on her lap." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -152,7 +152,7 @@
 						
 						<p class="caption-text">Anonymous, “Clark Wedding Certificate” (Manuscript, England, 21 September 1912), Chris Clark Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>. In 1912, siblings William Ivens Craft and Ellen A. Crum came together in Paddington after many years apart to witness the wedding of Nellie, William Ivens' eldest daughter, to Claude Ball Clark.</p>
 
-						<p>The next year, in 1912, after what the descendants were told was an unusually lengthy courtship, William Ivens’ eldest daughter, Ellen Louisa Craft – who went by Nellie – married Claud Ball Clark (Copeland 2022; 2021). Some descendants maintain that the delay in nuptials was due to the Clark family’s objections to Nellie’s mixed-race background (Copeland 2023a). William Ivens, still employed as a coal agent, was witness at his daughter’s wedding in Paddington. Ellen Craft Crum, too, came from afar to witness her niece's wedding (Green 2018, 143; Clark 2021).</p>
+						<p>The next year, in 1912, after what the descendants were told was an unusually lengthy courtship, William Ivens’ eldest daughter, Ellen Louisa Craft – who went by Nellie – married Claud Ball Clark (Copeland 2022; 2021). Some descendants maintain that the delay in nuptials was due to the Clark family’s objections to Nellie’s mixed-race background (Copeland 2023a). William Ivens, still employed as a coal agent, was witness at his daughter’s wedding in Paddington. Ellen Craft Crum, too, came from afar to witness her niece’s wedding (Green 2018, 143; Clark 2021).</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
@@ -168,9 +168,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “William Ivens Craft in Coal Yard” (Photograph, 1855-1926), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “Claud Ball Clark and Ellen Louisa Craft with Children” (Photograph, United Kingdom, [1919]), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> This photograph shows William Ivens Craft standing in a coal yard in England with his fellow workers. He is on the viewer's left, leaning against the cart. In the 1911 England Census, William Ivens listed his occupation as “coal agent,” and he was still recorded as such on his daughter's marriage record the following year. This image was likely captured during those years.</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> Claude Ball Clark (seated left) and Ellen (Nellie) Craft Clark with their two children, William Claude Clark and Caroline Nancy Clark, around 1919. Nellie was particularly close with her father, William Ivens, to whom she beared a considerable likeness.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
