--- a/html/ivens-craft/ic-home.html
+++ b/html/ivens-craft/ic-home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-		<title>Project Home | One More Voice</title><!--Change-->
+		<title>William Ivens Craft and the Transatlantic Victorian World Project Home | One More Voice</title><!--Change-->
 		<meta name="description" content="Home page for the “William Ivens Craft and the Transatlantic Victorian World” digital exhibit including links to all the exhibit pages."/><!--Change-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -23,7 +23,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
 		<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Merriweather:wght@400;700;900&family=Source+Sans+Pro:wght@400;600&family=Amaranth:wght@400;700&display=swap" rel="stylesheet"/>
 		<link rel="stylesheet" type="text/css" href="/css/critical.css?=newVers_0025"/>
-		<style>.image-wrapper::after{padding-bottom:calc((365/700)*100%)}</style>
+		<style>.image-wrapper::after{padding-bottom:calc((526/700)*100%)}</style>
 		<style>.coming-soon{font-family:'Times New Roman', Times, serif;font-weight:600;background:#ededed;border:1px solid;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;padding:0.5rem;position:absolute;top:40%;left:50%;transform:translate(-50%, -40%)}</style>
 	</head>
 
@@ -64,7 +64,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img class="image-border" width="700" height="365" src="/img/ivens-craft/liv_028135_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028135_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028135_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028135_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028135_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028135_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028135_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Detail of a letter signed by William Ivens Craft." /><!--Change-->
+					<img class="image-border" width="700" height="526" src="/img/ivens-craft/liv_028061_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028061_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028061_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028061_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028061_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028061_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028061_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Six men standing in front of a wooden building flanked by two horse carts with men in them." /><!--Change-->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -75,7 +75,7 @@
 
 				<div class="ic-home">
 					<span>
-						<h2 id="ivens-craft-home">Project Home</h2><!--Change-->
+						<h2 id="ivens-craft-home">William Ivens Craft and the Transatlantic Victorian World</h2><!--Change-->
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li><!--Change-->
 						 </ul>
@@ -237,7 +237,7 @@
 					<div class="section-container"><!-- for pages of your site; repeat as needed-->
 						<a href="/html/ivens-craft/ic-family_loss.html"><!--Change-->
 							<div class="section-image">
-								<img width="504" height="403" style="object-position: 50% 35%;" src="/img/ivens-craft/tiles/liv_028061_0001_deriv-824px.jpg" srcset="/img/ivens-craft/tiles/liv_028061_0001_deriv-824px.jpg 824w, /img/ivens-craft/tiles/liv_028061_0001_deriv-660px.jpg 660w, /img/ivens-craft/tiles/liv_028061_0001_deriv-582px.jpg 582w, /img/ivens-craft/tiles/liv_028061_0001_deriv-550px.jpg 550w, /img/ivens-craft/tiles/liv_028061_0001_deriv-522px.jpg 522w, /img/ivens-craft/tiles/liv_028061_0001_deriv-504px.jpg 504w, /img/ivens-craft/tiles/liv_028061_0001_deriv-476px.jpg 476w, /img/ivens-craft/tiles/liv_028061_0001_deriv-412px.jpg 412w, /img/ivens-craft/tiles/liv_028061_0001_deriv-330px.jpg 330w, /img/ivens-craft/tiles/liv_028061_0001_deriv-291px.jpg 291w, /img/ivens-craft/tiles/liv_028061_0001_deriv-275px.jpg 275w, /img/ivens-craft/tiles/liv_028061_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="Six men standing in front of a wooden building flanked by two horse carts with men in them." /><!--Change-->
+								<img width="504" height="403" style="object-position: 50% 35%;" src="/img/ivens-craft/tiles/liv_028008_0001_deriv-824px.jpg" srcset="/img/ivens-craft/tiles/liv_028008_0001_deriv-824px.jpg 824w, /img/ivens-craft/tiles/liv_028008_0001_deriv-660px.jpg 660w, /img/ivens-craft/tiles/liv_028008_0001_deriv-582px.jpg 582w, /img/ivens-craft/tiles/liv_028008_0001_deriv-550px.jpg 550w, /img/ivens-craft/tiles/liv_028008_0001_deriv-522px.jpg 522w, /img/ivens-craft/tiles/liv_028008_0001_deriv-504px.jpg 504w, /img/ivens-craft/tiles/liv_028008_0001_deriv-476px.jpg 476w, /img/ivens-craft/tiles/liv_028008_0001_deriv-412px.jpg 412w, /img/ivens-craft/tiles/liv_028008_0001_deriv-330px.jpg 330w, /img/ivens-craft/tiles/liv_028008_0001_deriv-291px.jpg 291w, /img/ivens-craft/tiles/liv_028008_0001_deriv-275px.jpg 275w, /img/ivens-craft/tiles/liv_028008_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="Six men standing in front of a wooden building flanked by two horse carts with men in them." /><!--Change-->
 								<div class="image-overlay"></div>
 							</div>
 							<div aria-labelledby="family-loss">
@@ -316,9 +316,9 @@
 					<aside id="credits"  class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption</strong>: William Ivens Craft, “Letter to F. W. Chesson from William Ivens Craft” (Manuscript, London, 6 September 1881), MSS. Brit. Emp. S. 18, C129/134ii, Bodleian Library, Oxford, United Kingdom. Noncommercial use.</p><!--Change-->
+						<p id="caption"><strong>Lead image caption</strong>: Anonymous, “William Ivens Craft in Coal Yard” (Photograph, 1855-1926), Martin Copeland Private Collection. <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p><!--Change-->
 						
-						<p><strong>Lead image commentary</strong>: This letter from William Ivens Craft to former abolitionist Frederick William Chesson displays William Ivens' advanced penmanship and grateful comportment, underscoring his status as an educated young man familiar with the societal mores of British elites. Nonetheless, as the son of formerly enslaved people, he struggled to support himself both in the US and in his home country of England.</p><!--Change-->
+						<p><strong>Lead image commentary</strong>: This photograph, from around 1910, shows William Ivens Craft standing in a coal yard in England with his fellow workers. He is on the viewer's left, leaning against the cart. Though an educated man, as the son of formerly enslaved people, William Ivens struggled to support himself both in the US and in his home country of England. Nonetheless, he managed to carve out a sense of belonging, community, and family that his descendants appreciate to this day.</p><!--Change-->
 					</aside>
 				</article>
 				<div class="decoration"></div>
