--- a/html/ivens-craft/ic-contributors_collaborators.html
+++ b/html/ivens-craft/ic-contributors_collaborators.html
@@ -121,7 +121,7 @@
 
 						<ul class="nostyle-list indented-list padded-list">
 							<li><strong>Aaisha N. Haykal</strong> (Avery Research Center, College of Charleston, USA) – Contributing Archivist</li>
-							<li><strong>Maureen Barnes</strong> – Family Representative and Historian</li>
+							<li><strong>Maureen Barnes</strong> (UK) – Family Representative and Historian</li>
 							<li><strong>Chris Clark</strong> (UK) – Family Representative and Historian</li>
 							<li><strong>Martin Copeland</strong> (UK) – Family Representative and Historian</li>
 							<li><strong>Eileen Copeland</strong> (UK) – Family Representative and Historian</li>
