--- a/html/ivens-craft/ic-bibliography.html
+++ b/html/ivens-craft/ic-bibliography.html
@@ -399,6 +399,10 @@
 
 						<p>McKeon, Christopher. 2018. “<a aria-label="External Link" href="https://www.getsurrey.co.uk/news/surrey-news/ockham-unveils-tribute-escaped-slaves-15138622">Ockham Unveils Tribute to Escaped Slaves Who Settled in Surrey Village</a>.” Surrey Live, 16 September 2018.</p>
 
+						<p>Murray, Hannah-Rose. 2020. “‘I Shall Speak out against This and Other Evils’: African American Activism in the British Isles 1865–1903.” <em>Slavery &amp; Abolition</em> 41 (1): 79–92.</p>
+
+						<p>Murray, Hannah-Rose. 2023. “‘The Black People's Side of the Story’: The Historical and Transatlantic Roots of the Movement for Black Lives.” <em>African American Review</em> 56 (1): 9-26.
+
 						<p>Ramati, Phillip. 2015. “<a aria-label="External Link" href="https://www.macon.com/news/local/article30172788.html">Story of Two Macon Slaves to Be Told by Great-Great Granddaughter</a>.” <em>The Telegraph</em>, 11 February 2015.</p>
 
 						<p>Russell, Adams L. 1984. <em>Great Negroes, Past and Present</em>. 4th ed. Vol. 1. Chicago: Afro-American Publishing Compant, Inc.</p>
