--- a/html/documents/contributors.html
+++ b/html/documents/contributors.html
@@ -142,6 +142,8 @@
 
 						<p><strong>Winter Jade Werner</strong> (Wheaton College, USA) – Advisor</p>
 
+						<p><strong>Darian Wilson</strong> (University of Nebraska-Lincoln, USA) – Student Encoder</p>
+
 						<p><strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln, USA) – Lead Developer</p>
 					</section>
 
