ic-final touches

--- a/html/ivens-craft/ic-bibliography.html
+++ b/html/ivens-craft/ic-bibliography.html
@@ -498,7 +498,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="ic-contributors_collaborators.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-craft_legacies.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
