--- a/html/ivens-craft/ic-contributors_collaborators.html
+++ b/html/ivens-craft/ic-contributors_collaborators.html
@@ -100,7 +100,7 @@
 						<ol aria-label="Menu">
 							<li><a href="#developers">Developers</a></li>
 							<li><a href="#contributors">Contributors</a></li>
-							<li><a href="#advisors">Scholarly Advisors</a></li>
+							<!-- <li><a href="#advisors">Scholarly Advisors</a></li> -->
 							<li><a href="#archives">Archives and Websites</a></li>
 							<li><a href="#citation">Page Citation</a></li>
 							<li><a href="#image-details">Lead Image Details</a></li>
@@ -134,14 +134,14 @@
 						</ul>
 					</section>
 
-					<section aria-labelledby="advisors">
+					<!-- <section aria-labelledby="advisors">
 						<h3 id="advisors">Scholarly Advisors</h3>
 
 						<ul class="nostyle-list indented-list padded-list">
 							<li><strong></strong> </li>
 							<li><strong></strong> </li>
 						</ul>
-					</section>			
+					</section> -->
 					
 					<section aria-labelledby="archives">
 						<h3 id="archives">Archives and Websites</h3>
@@ -185,7 +185,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="ic-craft_legacies.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-project_introduction.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
@@ -193,7 +193,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="ic-bibliography.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-parents_escape.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
