--- a/html/ivens-craft/ic-craft_legacies.html
+++ b/html/ivens-craft/ic-craft_legacies.html
@@ -78,6 +78,7 @@
 					<span>
 						<h2 id="craft-legacies">Craft Legacies Across Oceans and Time</h2><!-- Change -->
 						<ul class="publication-details">
+							<li><span>Author:</span> <strong>Hope McCaffrey</strong></li>
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
 						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Victorian Atlantic World</span><span class="full-title">William Ivens Craft and the Victorian Atlantic World</span></a></p>
@@ -232,7 +233,7 @@
 			</a>
 			</span>
 			<span class="tooltip-container">
-			<a id="next-arrow" class="arrow-button caption" href="ic-contributors_collaborators.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
+			<a id="next-arrow" class="arrow-button caption" href="ic-bibliography.html" aria-label="Next" aria-describedby="next-arrow-" data-tooltip-trigger>
 				<svg id="arrow-right" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M9 18l6-6-6-6"></path>
 				</svg>
