--- a/html/ivens-craft/ic-home.html
+++ b/html/ivens-craft/ic-home.html
@@ -77,8 +77,9 @@
 					<span>
 						<h2 id="ivens-craft-home">William Ivens Craft and the Transatlantic Victorian World</h2><!--Change-->
 						<ul class="publication-details">
-							<li><span>Date (publication and updates):</span> <strong>2024</strong></li><!--Change-->
-						 </ul>
+							<li><span>Developers:</span> <strong>Adrian Wisnicki</strong> | <strong>Hope McCaffrey</strong></li>
+						 <li><span>Editions:</span> <strong>Testing Version</strong> (2024)</li>
+						 </ul><!--Change-->
 						<figcaption class="caption-icon desktop">
 							<span class="tooltip-container">
 								<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-2" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -99,6 +100,19 @@
 							</div>
 							<div aria-labelledby="introduction">
 								<h4 id="introduction">Project Introduction</h4><!--Change-->
+								<p></p><!--Change-->
+							</div>
+						</a>
+					</div>
+
+					<div class="section-container"><!-- for pages of your site; repeat as needed-->
+						<a href="/html/ivens-craft/ic-contributors_collaborators.html"><!--Change-->
+							<div class="section-image">
+								<img width="504" height="403" style="object-position: 50% 35%;" src="/img/ivens-craft/tiles/liv_028001_0001_deriv-824px.jpg" srcset="/img/ivens-craft/tiles/liv_028001_0001_deriv-824px.jpg 824w, /img/ivens-craft/tiles/liv_028001_0001_deriv-660px.jpg 660w, /img/ivens-craft/tiles/liv_028001_0001_deriv-582px.jpg 582w, /img/ivens-craft/tiles/liv_028001_0001_deriv-550px.jpg 550w, /img/ivens-craft/tiles/liv_028001_0001_deriv-522px.jpg 522w, /img/ivens-craft/tiles/liv_028001_0001_deriv-504px.jpg 504w, /img/ivens-craft/tiles/liv_028001_0001_deriv-476px.jpg 476w, /img/ivens-craft/tiles/liv_028001_0001_deriv-412px.jpg 412w, /img/ivens-craft/tiles/liv_028001_0001_deriv-330px.jpg 330w, /img/ivens-craft/tiles/liv_028001_0001_deriv-291px.jpg 291w, /img/ivens-craft/tiles/liv_028001_0001_deriv-275px.jpg 275w, /img/ivens-craft/tiles/liv_028001_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="Bird's eye view of street, buildings on both sides, people and horse-drawn carriages in the street." /><!--Change-->
+								<div class="image-overlay"></div>
+							</div>
+							<div aria-labelledby="contributors-collaborators">
+								<h4 id="contributors-collaborators">Contributors & Collaborators</h4><!--Change-->
 								<p></p><!--Change-->
 							</div>
 						</a>
@@ -268,19 +282,6 @@
 							</div>
 							<div aria-labelledby="craft-legacies">
 								<h4 id="craft-legacies">Craft Legacies Across Oceans and Time</h4><!--Change-->
-								<p></p><!--Change-->
-							</div>
-						</a>
-					</div>
-
-					<div class="section-container"><!-- for pages of your site; repeat as needed-->
-						<a href="/html/ivens-craft/ic-contributors_collaborators.html"><!--Change-->
-							<div class="section-image">
-								<img width="504" height="403" style="object-position: 50% 35%;" src="/img/ivens-craft/tiles/liv_028001_0001_deriv-824px.jpg" srcset="/img/ivens-craft/tiles/liv_028001_0001_deriv-824px.jpg 824w, /img/ivens-craft/tiles/liv_028001_0001_deriv-660px.jpg 660w, /img/ivens-craft/tiles/liv_028001_0001_deriv-582px.jpg 582w, /img/ivens-craft/tiles/liv_028001_0001_deriv-550px.jpg 550w, /img/ivens-craft/tiles/liv_028001_0001_deriv-522px.jpg 522w, /img/ivens-craft/tiles/liv_028001_0001_deriv-504px.jpg 504w, /img/ivens-craft/tiles/liv_028001_0001_deriv-476px.jpg 476w, /img/ivens-craft/tiles/liv_028001_0001_deriv-412px.jpg 412w, /img/ivens-craft/tiles/liv_028001_0001_deriv-330px.jpg 330w, /img/ivens-craft/tiles/liv_028001_0001_deriv-291px.jpg 291w, /img/ivens-craft/tiles/liv_028001_0001_deriv-275px.jpg 275w, /img/ivens-craft/tiles/liv_028001_0001_deriv-252px.jpg 252w" sizes="(min-width: 1600px) 318px, (min-width: 1000px) calc(31.9vw - 55px), (min-width: 780px) 287px, calc(100vw - 68px)" alt="Bird's eye view of street, buildings on both sides, people and horse-drawn carriages in the street." /><!--Change-->
-								<div class="image-overlay"></div>
-							</div>
-							<div aria-labelledby="contributors-collaborators">
-								<h4 id="contributors-collaborators">Contributors & Collaborators</h4><!--Change-->
 								<p></p><!--Change-->
 							</div>
 						</a>
