--- a/html/ivens-craft/ic-parents_escape.html
+++ b/html/ivens-craft/ic-parents_escape.html
@@ -78,6 +78,7 @@
 					<span>
 						<h2 id="parents-escape">William and Ellen’s Daring Escape</h2>
 						<ul class="publication-details">
+							<li><span>Author:</span> <strong>Hope McCaffrey</strong></li>
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
 						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Victorian Atlantic World</span><span class="full-title">William Ivens Craft and the Victorian Atlantic World</span></a></p>
@@ -197,7 +198,7 @@
 
 		<div id="arrow-container" class="arrow-container">
 			<span class="tooltip-container">
-			<a id="previous-arrow" class="arrow-button caption" href="ic-project_introduction.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
+			<a id="previous-arrow" class="arrow-button caption" href="ic-contributors_collaborators.html" aria-label="Previous" aria-describedby="previous-arrow" data-tooltip-trigger>
 				<svg  id="arrow-left"  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#212119" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">
 					<path d="M15 18l-6-6 6-6"></path>
 				</svg>
