--- a/html/ivens-craft/ic-new_dreams.html
+++ b/html/ivens-craft/ic-new_dreams.html
@@ -78,6 +78,7 @@
 					<span>
 						<h2 id="new-dreams">New Dreams for an Old Home</h2><!-- Change -->
 						<ul class="publication-details">
+							<li><span>Author:</span> <strong>Hope McCaffrey</strong></li>
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
 						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Victorian Atlantic World</span><span class="full-title">William Ivens Craft and the Victorian Atlantic World</span></a></p>
