--- a/html/ivens-craft/ic-home.html
+++ b/html/ivens-craft/ic-home.html
@@ -77,7 +77,8 @@
 					<span>
 						<h2 id="ivens-craft-home">William Ivens Craft and the Transatlantic Victorian World</h2><!--Change-->
 						<ul class="publication-details">
-							<li><span>Developers:</span> <strong>Adrian Wisnicki</strong> | <strong>Hope McCaffrey</strong></li>
+							<li><span>Developers:</span> <strong>Hope McCaffrey</strong> (Northwestern University)</li>
+							<li><strong>Adrian Wisnicki</strong> (University of Nebraska-Lincoln)</li>
 						 <li><span>Editions:</span> <strong>Testing Version</strong> (2024)</li>
 						 </ul><!--Change-->
 						<figcaption class="caption-icon desktop">
