u ic button text

--- a/html/ivens-craft/ic-bibliography.html
+++ b/html/ivens-craft/ic-bibliography.html
@@ -41,7 +41,7 @@
 				<ul>
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
-					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
+					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Transatlantic Victorian World</a></li>
 					<li id="level-4">Bibliography</li><!-- Change -->
 				</ul>
 			</nav>
@@ -80,7 +80,7 @@
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
-						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Victorian Atlantic World</span><span class="full-title">William Ivens Craft and the Victorian Atlantic World</span></a></p>
+						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Transatlantic Victorian World</span><span class="full-title">William Ivens Craft and the Transatlantic Victorian World</span></a></p>
 						<figcaption class="caption-icon desktop">
 							<span class="tooltip-container">
 								<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-2" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
