--- a/html/ivens-craft/ic-return_to_england.html
+++ b/html/ivens-craft/ic-return_to_england.html
@@ -78,7 +78,8 @@
 					<span>
 						<h2 id="return-to-england">William Ivens Craft Returns to England</h2><!-- Change -->
 						<ul class="publication-details">
-							<li><span>Author:</span> <strong>Hope McCaffrey</strong></li>
+							<li><span>Author:</span> <strong>Hope McCaffrey</strong> (Northwestern University)</li>
+							<li><span>Technical Editor:</span> <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</li>
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
 						<p id="bv-project"><a href="/html/ivens-craft/ic-home.html"><span class="brief-title">W.I. Craft and the Transatlantic Victorian World</span><span class="full-title">William Ivens Craft and the Transatlantic Victorian World</span></a></p>
