--- a/html/ivens-craft/ic-project_introduction.html
+++ b/html/ivens-craft/ic-project_introduction.html
@@ -78,7 +78,7 @@
 					<span>
 						<h2 id="project-introduction">Project Introduction</h2><!-- Change -->
 						<ul class="publication-details">
-							<li><span>Author and Developer:</span> <strong>Hope McCaffrey</strong> (Northwestern University)</li>
+							<li><span>Author / Developer:</span> <strong>Hope McCaffrey</strong> (Northwestern University)</li>
 							<li><span>Digital Advisor:</span> <strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</li>
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
