--- a/html/ivens-craft/ic-craft_legacies.html
+++ b/html/ivens-craft/ic-craft_legacies.html
@@ -197,7 +197,7 @@
 
 						<aside class="text-box">The Craft family story is “... not a unique story, but quite a rare story.” - Martin Copeland</aside>
 
-						<p>That the Craft family diaspora has kept in touch across centuries, nations, and oceans is no small feat, but is also not just happenstance. Rather, it speaks to the centrality of family, community, and belonging to the Craft story. William Ivens Craft lived a life circumscribed, though not defined, by race and poverty. As he wrote in 1881, “I [...] am striving to do the best I can” (Craft 1881a). Ultimately, William Ivens created for himself a home, a life, and, most importantly, a family – despite the setbacks.</p>
+						<p>That the Craft family diaspora has kept in touch across centuries, nations, and oceans is no small feat, but is also not just happenstance. Rather, it speaks to the centrality of family, community, and belonging to the Craft story. William Ivens Craft lived a life circumscribed, though not defined, by race and poverty. As he wrote in 1881, “I [...] am striving to do the best I can” (<a href="/html/transcriptions/liv_020089_TEI.html">Craft 1881a</a>). Ultimately, William Ivens created for himself a home, a life, and, most importantly, a family – despite the setbacks.</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
