--- a/html/ivens-craft/ic-parents_escape.html
+++ b/html/ivens-craft/ic-parents_escape.html
@@ -141,7 +141,7 @@
 						
 						<p class="caption-text">Anonymous, “<a aria-label="External Link" href="https://www.facebook.com/media/set/?set=a.517735121735870.1073742237.305224599653591&type=3&paipv=0&eav=AfYcAVo6ZCrdW9YkxC0u5yMJOoexPi5wl8SlNrPZ_eO2yealWH3LZG7kAVs6XPYGtxI&_rdr">Residence of Robert Collins ESQr M. D. Mulberry Street</a>” (Illustration, Georgia, United States, [c.1830-1980]). Rights unknown. This sketch depicts the house, owned by Robert and Eliza Collins, from which Ellen absconded in 1848. Ellen, whom the Collins' enslaved and forced to work as a domestic servant, would have been very familiar with the large house. Her act of defiance gave lie to proslavery apologists and advocates who claimed that enslaved people who worked in domestic settings were somehow better off than other enslaved people.</p>
 						
-						<p>Shortly after the couple’s 1846 marriage, they planned their escape (McCaskill 2009, 86) from what William later referred to as “the unrighteous & gallding [sic] yoke, which is now crushing over three millions of my unfortunate country men in to a premature grave” (Craft 1853).</p>
+						<p>Shortly after the couple’s 1846 marriage, they planned their escape (McCaskill 2009, 86) from what William later referred to as “the unrighteous & gallding [sic] yoke, which is now crushing over three millions of my unfortunate country men in to a premature grave” (<a href="/html/transcriptions/liv_020070_TEI.html">Craft 1853</a>).</p>
 					</section>
 
 					<section aria-labelledby="escape"><!-- Change -->
