--- a/html/ivens-craft/ic-family_loss.html
+++ b/html/ivens-craft/ic-family_loss.html
@@ -142,7 +142,7 @@
 					<section aria-labelledby="be-alright"><!-- Change -->
 						<h3 id="be-alright">“I Shall be Alright”</h3><!-- Change -->
 
-						<p>Rather than hold his old promise to Elizabeth Pease Nichol and return to his family in the United States, William Ivens instead stayed and built his life in London – likely due in no small part to the changes wrought by his fateful change of lodging in 1882. As he had written to Chesson that day, “I shall be alright” (Craft 1882c).</p>
+						<p>Rather than hold his old promise to Elizabeth Pease Nichol and return to his family in the United States, William Ivens instead stayed and built his life in London – likely due in no small part to the changes wrought by his fateful change of lodging in 1882. As he had written to Chesson that day, “I shall be alright” (<a href="/html/transcriptions/liv_020086_TEI.html">Craft 1882d</a>).</p>
 
 						<span class="center vertical">
 							<img class="image-border" loading="lazy" class="illustration" width="624" height="969" src="/img/ivens-craft/liv_028057_0001_deriv-980px.jpg" srcset="/img/ivens-craft/liv_028057_0001_deriv-200px.jpg 200w, /img/ivens-craft/liv_028057_0001_deriv-312px.jpg 312w, /img/ivens-craft/liv_028057_0001_deriv-400px.jpg 400w, /img/ivens-craft/liv_028057_0001_deriv-444px.jpg 444w, /img/ivens-craft/liv_028057_0001_deriv-490px.jpg 490w, /img/ivens-craft/liv_028057_0001_deriv-624px.jpg 624w, /img/ivens-craft/liv_028057_0001_deriv-888px.jpg 888w, /img/ivens-craft/liv_028057_0001_deriv-980px.jpg 980w" sizes="(min-width: 992px) calc(700 * .7), (min-width: 768px) calc(634 * .7), (min-width: 480px) calc(.7 * (100vw - 34px)), calc(100vw - 34px)" alt="Two men in suits; one is standing and one Is seated." />
